FFWS-1: Fix alignment of apply button for dropdowns

--- a/src/fleming-theme/templates/skeleton-scss/modules/_buttons.scss
+++ b/src/fleming-theme/templates/skeleton-scss/modules/_buttons.scss
@@ -43,6 +43,7 @@ input {
     border: 1px solid $border-color;
     cursor: pointer;
     box-sizing: border-box;
+    vertical-align: top;
   }
 }
 
